Fix wrapping in header container

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button, a,
     display: flex;
     padding: 64px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .title {
